--- a/mac-settings/templates/usr.xml
+++ b/mac-settings/templates/usr.xml
@@ -14,4 +14,18 @@
       <option name="JAVA_SCRIPT" value="true" />
     </context>
   </template>
+  <template name="sfn" value="static $1$($2$) {&#10; $3$&#10;}" description="static function" toReformat="true" toShortenFQNames="true">
+    <variable name="1" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="2" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="3" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+    </context>
+  </template>
+  <template name="clog" value="console.log($1$);" description="console.log" toReformat="false" toShortenFQNames="true">
+    <variable name="1" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+    </context>
+  </template>
 </templateSet>
